fixed overflow bug

--- a/dev/tabs/tabs.css
+++ b/dev/tabs/tabs.css
@@ -23,5 +23,4 @@ tab-view {
 	padding: 0px 10px;
 	font-size: 110%;
 	text-align: center;
-	white-space: nowrap;
 }
